Fixed a visual glitch where the theme toggler would not correctly change text color of Love Calculator when device is in light mode to toggle dark mode

--- a/src/assets/css/game-love-calculator.css
+++ b/src/assets/css/game-love-calculator.css
@@ -28,6 +28,7 @@ section.content .disclaimer
   body.toggle-color-scheme section.content
   {
     background-color: rgb(98, 52, 151);
+    color: var( --color-text-light ) !important;
   }
   
   body.toggle-color-scheme section.content .disclaimer
@@ -46,6 +47,7 @@ section.content .disclaimer
   body.toggle-color-scheme section.content
   {
     background-color: rgb(184, 159, 212);
+    color: var( --color-text-dark ) !important;
   }
 
   section.content .disclaimer
